2007-12-05  Lluis Sanchez Gual <lluis@novell.com> 

	* gtk-gui/gui.stetic, Mono.Addins.Gui.mdp: Flush.
	* Mono.Addins.Gui/AddinInstallDialog.cs: When checking if an add-in is
	  installed, don't provide the version number. This will return whatever
	  version is installed.

2007-12-04  Geoff Norton  <gnorton@novell.com>

	* Mono.Addins.Gui/AddinInstallDialog.cs: Use Process.Start to launch
	a web browser rather than Gnome.Url.Show.
	* Mono.Addins.Gui.mdp: 
	* Makefile.am: Remove dependency on gnome-sharp

2007-12-04  Lluis Sanchez Gual <lluis@novell.com> 

	* mono-addins-gui.pc.in: Fix dependencies.

2007-10-29  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Addins.Gui.mdp: Update paths.

2007-10-18  Lluis Sanchez Gual <lluis@novell.com> 

	* AssemblyInfo.cs: Get ready for 0.3 release.

2007-10-10  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Addins.Gui/AddinTreeWidget.cs: Make this class public.

2007-09-10  Lluis Sanchez Gual <lluis@novell.com> 

	* gtk-gui/Mono.Addins.Gui.ManageSitesDialog.cs, gtk-gui/generated.cs,
	  gtk-gui/Mono.Addins.Gui.AddinInstallDialog.cs,
	  gtk-gui/Mono.Addins.Gui.ErrorDialog.cs,
	  gtk-gui/Mono.Addins.Gui.AddinManagerDialog.cs,
	  gtk-gui/Mono.Addins.Gui.AddinInfoDialog.cs,
	  gtk-gui/Mono.Addins.Gui.AddinInstallerDialog.cs,
	  gtk-gui/Mono.Addins.Gui.NewSiteDialog.cs, gtk-gui/gui.stetic,
	  Mono.Addins.Gui/NewSiteDialog.cs: Fix some GUI issues in the manage
	  sites dialog.

2007-08-07  Chris Howie <cdhowie@nerdshack.com>

	* gtk-gui/Mono.Addins.Gui.AddinManagerDialog.cs,
	  gtk-gui/Mono.Addins.Gui.AddinInfoDialog.cs,
	  gtk-gui/Mono.Addins.Gui.ErrorDialog.cs, gtk-gui/gui.stetic: Removed
	  MonoDevelop-specific strings.
	* gtk-gui/Mono.Addins.Gui.ManageSitesDialog.cs, gtk-gui/generated.cs,
	  gtk-gui/Mono.Addins.Gui.AddinInstallDialog.cs,
	  gtk-gui/Mono.Addins.Gui.ManageSitesDialog.cs,
	  gtk-gui/Mono.Addins.Gui.AddinInstallerDialog.cs: Regenerated.
	* Mono.Addins.Gui/AddinManagerWindow.cs: Added static property for