@@ -54,6 +54,7 @@ EXTRAS = \
 	./Makefile.am 
 
 REFERENCES =  \
+	-pkg:glib-sharp-2.0 \
 	-pkg:gtk-sharp-2.0 \
 	-r:Mono.Posix \
 	-r:System
